[apache/helix] -- Updated code to be build compatible with JDK-8.